--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
     implementation(libs.exoplayer.core)
     implementation(libs.exoplayer.ui)
     implementation(libs.exoplayer)
+
+    implementation libs.glide.v4151
+    annotationProcessor libs.compiler
 }
