Fixes issue with Glide. Improved logic with opening videos.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,5 @@ dependencies {
     implementation(libs.exoplayer)
 
     implementation libs.glide.v4151
-    annotationProcessor libs.compiler
+    kapt libs.compiler
 }
